kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-api-churn
  labels:
    app: api-churn
spec:
  type: ClusterIP
  ports:
    - name: port-api
      port: 8000
      targetPort: 8000
  selector:
    app: api-churn
